# passforge

./: .gitignore  README.md  pyproject.toml
passforge/: __init__.py  __main__.py  cli.py  generator.py
