[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passforge-cli"
version = "0.1.0"
description = "Secure password and secret generator — passwords, passphrases, PINs, tokens, and strength analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shazeus", email = "efeborazan07@gmail.com" }]
keywords = ["password", "generator", "security", "passphrase", "cli", "secrets", "token"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://github.com/shazeus/passforge"
Repository = "https://github.com/shazeus/passforge"
Issues = "https://github.com/shazeus/passforge/issues"

[project.scripts]
passforge = "passforge.cli:cli"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["passforge*"]
